--- a/user-panel/styles/owner-page-style.css
+++ b/user-panel/styles/owner-page-style.css
@@ -11,7 +11,6 @@ body{
     flex-flow:column nowrap;
     min-height:100vh;
     border:1px solid black;
-  
 }
 img{
     display:block;
@@ -67,7 +66,7 @@ img{
 }
 .main-body{
     display:flex;
-
+    flex-grow: 1;
 }
 /*nav design */
 .header-nav{
